objects/Client_Plan_Borrowers_Guarantors__c.object
<CustomObject>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Plan Borrowers Guarantors</relationshipLabel>
        <relationshipName>Client_Plan_Borrowers_Guarantors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Guarantor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Client Plan Borrowers Guarantors</label>
    <nameField>
        <label>Client Plan Borrowers Guarantors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Plan Borrowers Guarantors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>